# Sipeed-NanoKVM-USB-python-lib

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docs/: API.md
examples/: ai_agent_loop.py  basic_usage.py  mouse_control.py  open_chrome_win11.py
nanokvm/: __init__.py  __main__.py  _logger.py  device.py  keyboard.py  mouse.py  protocol.py  serial_conn.py  video.py
tests/: test_keyboard.py  test_mouse.py  test_protocol.py
