[project]
name = "nanokvm"
version = "0.1.1"
description = "Python library for controlling machines via NanoKVM-USB — serial HID + UVC video capture for AI agents"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pyserial>=3.5",
    "opencv-python>=4.8",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/Sipeed/NanoKVM-USB-python-lib"
Repository = "https://github.com/Sipeed/NanoKVM-USB-python-lib"

[project.scripts]
nanokvm = "nanokvm.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
include = ["nanokvm", "examples"]
